# nutcracker

./: .gitignore  .gitmodules  CMakeLists.txt  DEPLOY.md  README.md  nutcracker.sh
apps/example/: example.mlir  example.p4
apps/ingressINT/: ingressINT.mlir  ingressINT.p4
apps/ingressMazuNAT/: arm.ll  arm_raw.ll  ingressMazuNAT.c
apps/load_balance/: load_balance.mlir  load_balance.p4
apps/meter/: meter.mlir  meter.p4
apps/register/: register.mlir  register.p4
apps/shared_counter/: shared_counter.p4
apps/simple_forwarding/: simple_forwarding.mlir  simple_forwarding.p4
apps/syn_flood/: syn_flood.mlir  syn_flood.p4
apps/weighted_avg/: weighted_avg.mlir  weighted_avg.p4
build_scripts/: build_llvm.sh
deploy/: meson.build  nc_dpa_stub.c  nc_pipeline.h
egglog_rules/: vdpp_to_bf3dpa.egg  vdrmt_to_bf2drmt.egg  vdrmt_to_bf3drmt.egg
include/Dialect/: CMakeLists.txt
include/Dialect/Backend/: CMakeLists.txt
include/Dialect/Backend/BF2/DRMT/IR/: BF2DRMT.td  BF2DRMTDialect.h  BF2DRMTDialect.td  BF2DRMTOps.h  BF2DRMTOps.td  BF2DRMTOpsEnums.h  BF2DRMTTypes.h  BF2DRMTTypes.td  CMakeLists.txt
include/Dialect/Backend/BF3/: CMakeLists.txt
include/Dialect/Backend/BF3/DPA/IR/: BF3DPA.td  BF3DPADialect.h  BF3DPADialect.td  BF3DPAOps.h  BF3DPAOps.td  BF3DPAOpsEnums.h  CMakeLists.txt
include/Dialect/Backend/BF3/DRMT/IR/: BF3DRMT.td  BF3DRMTDialect.h  BF3DRMTDialect.td  BF3DRMTOps.h  BF3DRMTOps.td  BF3DRMTOpsEnums.h  BF3DRMTTypes.h  BF3DRMTTypes.td  CMakeLists.txt
include/Dialect/PDG/: CMakeLists.txt  PDG.td  PDGDialect.h  PDGDialect.td  PDGOps.h  PDGOps.td
include/Dialect/vDPP/IR/: CMakeLists.txt  vDPP.td  vDPPDialect.h  vDPPDialect.td  vDPPOpInterfaces.h  vDPPOpInterfaces.td  vDPPOps.h  vDPPOps.td  vDPPOpsEnums.h  vDPPTypes.h  vDPPTypes.td
include/Dialect/vDRMT/IR/: CMakeLists.txt  vDRMT.td  vDRMTAttrs.h  vDRMTAttrs.td  vDRMTDialect.h  vDRMTDialect.td  vDRMTOpInterfaces.h  vDRMTOpInterfaces.td  vDRMTOps.h  vDRMTOps.td  vDRMTOpsEnums.h  vDRMTTypeInterfaces.h  vDRMTTypeInterfaces.td  vDRMTTypes.h  vDRMTTypes.td
include/Pass/: BF2DRMTToDocaFlowPass.h  BF3DPAToARMCodePass.h  BF3DPAToDPACodePass.h  BF3DRMTToDocaFlowPass.h  DocaFlowTemplate.h  EggifyPass.h  Egglog.h  EgglogCustomDefs.h  EmitHandlerCodePass.h  EqualitySaturationPass.h  LLVMIRToVDPPPass.h  LLVMIRToVDRMTPass.h  P4HIRPartitionPass.h  P4HIRToPDGPass.h  P4HIRToVDPPPass.h  P4HIRToVDRMTPass.h  VDPPToBF3DPAPass.h  VDPPToLLVMPass.h  VDRMTCoarseGrainedPass.h  VDRMTToBF2DRMTPass.h  VDRMTToBF3DRMTPass.h  VFFSCoarseGrainedPass.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/Backend/BF2/: CMakeLists.txt
lib/Dialect/Backend/BF2/DRMT/IR/: BF2DRMTDialect.cpp  BF2DRMTOps.cpp  BF2DRMTTypes.cpp  CMakeLists.txt
lib/Dialect/Backend/BF3/DPA/IR/: BF3DPADialect.cpp  BF3DPAOps.cpp  CMakeLists.txt
lib/Dialect/Backend/BF3/DRMT/IR/: BF3DRMTDialect.cpp  BF3DRMTOps.cpp  BF3DRMTTypes.cpp  CMakeLists.txt
lib/Dialect/PDG/: CMakeLists.txt  PDGDialect.cpp  PDGOps.cpp
lib/Dialect/vDPP/IR/: CMakeLists.txt  vDPPDialect.cpp  vDPPOpInterfaces.cpp  vDPPOps.cpp  vDPPTypes.cpp
lib/Dialect/vDRMT/IR/: CMakeLists.txt  vDRMTDialect.cpp  vDRMTOpInterfaces.cpp  vDRMTOps.cpp  vDRMTTypeInterfaces.cpp  vDRMTTypes.cpp
lib/Pass/: CMakeLists.txt  P4HIRToPDGPass.cpp
lib/Pass/BF2DRMTToDocaFlow/: CMakeLists.txt  DocaFlowCodegen.cpp
lib/Pass/BF3DPAToARMCode/: ARMCodegen.cpp  CMakeLists.txt
lib/Pass/BF3DPAToDPACode/: CMakeLists.txt  DPACodegen.cpp
lib/Pass/BF3DRMTToDocaFlow/: CMakeLists.txt  DocaFlowCodegen.cpp  DocaFlowTemplate.cpp
lib/Pass/EmitHandlerCode/: CMakeLists.txt  EmitHandlerCodePass.cpp
lib/Pass/EqualitySaturation/: CMakeLists.txt  Egglog.cpp  EgglogCustomDefs.cpp  EqualitySaturationPass.cpp
lib/Pass/LLVMIRToVDPP/: CMakeLists.txt  LLVMIRToVDPPPass.cpp
lib/Pass/LLVMIRToVDRMT/: CMakeLists.txt  LLVMIRToVDRMTPass.cpp
lib/Pass/P4HIRPartition/: CMakeLists.txt  P4HIRPartitionPass.cpp
lib/Pass/P4HIRToVDPP/: CMakeLists.txt  P4HIRToVDPPPass.cpp
lib/Pass/P4HIRToVDRMT/: CMakeLists.txt  P4HIRToVDRMTPass.cpp
lib/Pass/VDPPToBF3DPA/: CMakeLists.txt  VDPPToBF3DPAPass.cpp
lib/Pass/VDPPToLLVM/: CMakeLists.txt  VDPPToLLVMPass.cpp
lib/Pass/VDRMTToBF2DRMT/: CMakeLists.txt  VDRMTToBF2DRMTPass.cpp
lib/Pass/VDRMTToBF3DRMT/: CMakeLists.txt  VDRMTToBF3DRMTPass.cpp
lib/Pass/VFFSCoarseGrainedPass/: CMakeLists.txt  VFFSCoarseGrainedPass.cpp
p4include/: nc.p4
patches/: 01_fix_p4mlir_build_script.patch
runtime/: meson.build  nc_arm_worker.c  nc_doca_flow.c  nc_flexio_host.c  nc_runtime_main.c
runtime/include/: nc_pipeline.h  nc_runtime.h  nc_types.h
runtime_bf2/: flow_common.c  flow_common.h  meson.build  meson_options.txt  nc_bf2_main.c  run.sh
runtime_bf2/common/: dpdk_utils.c  dpdk_utils.h  offload_rules.c  offload_rules.h
templates/: doca-2.2.toml  doca-2.9.toml
test/: dialect_examples.mlir
tools/: CMakeLists.txt
tools/nutcracker-opt/: CMakeLists.txt  nutcracker-opt.cpp
