add_subdirectory(P4HIRPartition)
add_subdirectory(P4HIRToVDRMT)
add_subdirectory(P4HIRToVDPP)
add_subdirectory(EqualitySaturation)
add_subdirectory(VDRMTToBF3DRMT)
add_subdirectory(BF3DRMTToDocaFlow)
add_subdirectory(BF3DPAToDPACode)
add_subdirectory(BF3DPAToARMCode)
add_subdirectory(VDPPToBF3DPA)
add_subdirectory(EmitHandlerCode)