add_subdirectory(P4HIRPartition)
add_subdirectory(P4HIRToVDRMT)
add_subdirectory(VFFSCoarseGrainedPass)
add_subdirectory(P4HIRToVDPP)
add_subdirectory(EqualitySaturation)
add_subdirectory(VDRMTToBF3DRMT)
add_subdirectory(BF3DRMTToDocaFlow)
add_subdirectory(BF3DPAToDPACode)
add_subdirectory(LLVMIRToVDPP)
add_subdirectory(LLVMIRToVDRMT)
add_subdirectory(VDPPToLLVM)
add_subdirectory(VDPPToBF3DPA)
add_subdirectory(EmitHandlerCode)